chore: add algorand acc

--- a/src/example-frontend.html
+++ b/src/example-frontend.html
@@ -80,6 +80,7 @@
         </form>
       </div>
 
+      <a href="https://dispenser.testnet.aws.algodev.network/?account=JMJLRBZQSTS6ZINTD3LLSXCW46K44EI2YZHYKCPBGZP3FLITIQRGPELOBE">testnet dispense algorand main acc</a>
       <p>Some log should come here.</p>
     </div>
 
