feat: frontend accounts

--- a/src/example-frontend.html
+++ b/src/example-frontend.html
@@ -43,12 +43,12 @@
         <form action="/api/mint" method="post">
           <label>
             From (NEAR public address)
-            <input type="text" name="mint_from" id="mint_from" value="example NEAR address" />
+            <input type="text" name="mint_from" id="mint_from" value="abstrlabs-test.testnet" />
           </label>
           <br />
           <label>
             To (Algorand public address)
-            <input type="text" name="mint_to" value="example Algorand address" />
+            <input type="text" name="mint_to" value="ACCSSTKTJDSVP4JPTJWNCGWSDAPHR66ES2AZUAH7MUULEY43DHQSDNR7DA" />
           </label>
           <br />
           <label>
@@ -64,12 +64,12 @@
         <form action="/api/mint" method="post">
           <label>
             From (Algorand public address)
-            <input type="text" name="burn_from" value="example NEAR address"/>
+            <input type="text" name="burn_from" value="abstrlabs-test.testnet"/>
           </label>
           <br />
           <label>
             To (NEAR public address)
-            <input type="text" name="burn_to" value="example NEAR address"/>
+            <input type="text" name="burn_to" value="ACCSSTKTJDSVP4JPTJWNCGWSDAPHR66ES2AZUAH7MUULEY43DHQSDNR7DA"/>
           </label>
           <br />
           <label>
