ref: txId;mod server, handler;BridgeTxnParam

--- a/src/example-frontend.html
+++ b/src/example-frontend.html
@@ -57,10 +57,11 @@
             <br />
             <label>
               Amount
-              <input type="number" name="mint_amount" value="456.789" />
+              <input type="number" name="mint_amount" value="1" />
             </label>
+            <br />
             <label>Transaction ID
-              <input type="text" name="mint_txid">
+              <input type="text" name="mint_txId" value="8mdZck4aC7UCNsM86W7fTqi8P9r1upw8vtoFscqJwgC7">
             </label>
             <button>MINT</button>
           </form>
@@ -84,7 +85,7 @@
               <input type="number" name="burn_amount" value="987.654" />
             </label>
             <label>Transaction ID
-              <input type="text" name="burn_txid">
+              <input type="text" name="burn_txId">
             </label>
             <button>BURN</button>
           </form>
