feat: add an interface to test verify function

--- a/src/example-frontend.html
+++ b/src/example-frontend.html
@@ -48,7 +48,8 @@
 
         <div>
           <h2>Mint</h2>
-          <form action="/api/mint" method="post">
+          <!-- <form action="/api/mint" method="post"> -->
+          <form action="/api/near/verify" method="post">
             <label>
               From (NEAR public address)
               <input type="text" name="mint_from" id="mint_from" value="abstrlabs-test.testnet" />
