ref: mv frontend files (in server.ts)

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./frontend/index.css">
     <title>Algorand - NEAR Bridge</title>
   </head>
 
@@ -187,8 +187,8 @@
   <script src="https://cdn.jsdelivr.net/npm/near-api-js@0.41.0/dist/near-api-js.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/algosdk@v1.16.0/dist/browser/algosdk.min.js"
     crossorigin="anonymous"></script>
-  <script src="./js/dependencies/myalgo.min.js"></script>
-  <script src="./js/near.js"></script>
+  <script src="./frontend/dependencies/myalgo.min.js"></script>
+  <script src="./frontend/near.js"></script>
 
   <script comment="Algorand wallet connect">
 
