feat: add a `use-example-data-checkbox`

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -19,6 +19,7 @@
     <header>
       <h1>Algorand - NEAR Bridge</h1>
       <p>This is a demo of the Algorand Bridge for NEAR.</p>
+      <input type="checkbox" name="use-example-data" id="use-example-data-checkbox" checked> Use Example Data
     </header>
 
     <div role="body">
