feat: redirect`/`->`/frontend`

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./frontend/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Algorand - NEAR Bridge</title>
   </head>
 
@@ -140,9 +140,9 @@
     crossorigin="anonymous"></script>
 
   <!-- <script src="index.js" type="module"></script> -->
-  <script src="./frontend/dependencies/myalgo.min.js"></script>
-  <script src="./frontend/near.js" comment="NEAR wallet connect"></script>
-  <script src="./frontend/algo.js" comment="Algorand wallet connect"></script>
+  <script src="./dependencies/myalgo.min.js"></script>
+  <script src="./near.js" comment="NEAR wallet connect"></script>
+  <script src="./algo.js" comment="Algorand wallet connect"></script>
 
   <script comment="tab-switch-handler">
     /*tab selection for mint and burn*/
